--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -9,7 +9,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#000"
     tools:context="com.example.cormacclancyruiz.communicarte.MainMenu">
 
     <Button
@@ -17,12 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/join_session"
-        android:layout_marginBottom="74dp"
-        android:background = "#967685"
+        android:background = "#34148c"
         android:textColor = "@android:color/white"
         style="@style/Widget.AppCompat.Button"
+        android:layout_marginBottom="51dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/create_session" />
 
     <Button
         android:text="Create Session"
@@ -30,19 +29,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/create_session"
         style="@style/Widget.AppCompat.Button"
-        android:background = "#967685"
+        android:background = "#34148c"
         android:textColor = "@android:color/white"
+        android:layout_marginBottom="18dp"
         android:layout_above="@+id/join_session"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="18dp" />
+        android:layout_centerHorizontal="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo1"
-        android:layout_marginTop="17dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        app:srcCompat="@drawable/logo4"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp" />
 
 </RelativeLayout>
