rounded buttons and added drawable files

--- a/app/src/main/res/layout/activity_join_session.xml
+++ b/app/src/main/res/layout/activity_join_session.xml
@@ -34,7 +34,7 @@
         android:fontFamily="serif"
         android:textStyle="normal|bold"
         style="@style/Widget.AppCompat.Button"
-        android:backgroundTint="#34148c"
+        android:background="@drawable/mybutton"
         android:elevation="0dp"
         android:layout_below="@+id/editText3"
         android:layout_centerHorizontal="true" />
