--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/join_session"
-        android:background = "#34148c"
+        android:background = "@drawable/mybutton"
         android:textColor = "@android:color/white"
         style="@style/Widget.AppCompat.Button"
         android:layout_marginBottom="51dp"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/create_session"
         style="@style/Widget.AppCompat.Button"
-        android:background = "#34148c"
+        android:background = "@drawable/mybutton"
         android:textColor = "@android:color/white"
         android:layout_marginBottom="18dp"
         android:layout_above="@+id/join_session"
