--- a/app/src/main/res/layout/activity_create_session.xml
+++ b/app/src/main/res/layout/activity_create_session.xml
@@ -12,41 +12,30 @@
 
     <Button
         android:text="Generate session key"
-        android:layout_width="wrap_content"
+        android:textColor="#ffffff"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:background="@drawable/mybutton"
         android:id="@+id/generate_key"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Session keys are generated randomly."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/generate_key"
-        android:layout_toStartOf="@+id/generate_key"
-        android:layout_marginTop="40dp"
-        android:id="@+id/textView2"
-        android:text="Session Key=" />
+        android:layout_alignParentStart="true"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:elevation="0dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/session_keyID"
-        android:layout_marginEnd="36dp"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignEnd="@+id/generate_key"
         android:fontFamily="sans-serif"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        android:layout_alignBaseline="@+id/generate_key"
+        android:layout_alignBottom="@+id/generate_key"
+        android:layout_toEndOf="@+id/generate_key"
+        android:layout_marginStart="42dp"
+        android:textSize="18sp"
+        android:textColor="#34148c"
+        android:textStyle="normal|bold" />
 
 </RelativeLayout>
