--- a/app/src/main/res/drawable/mybutton.xml
+++ b/app/src/main/res/drawable/mybutton.xml
@@ -4,14 +4,14 @@
      <shape android:shape="rectangle"  >
          <corners android:radius="3dip" />
          <stroke android:width="1dip" android:color="#34148c" />
-         <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />            
+         <gradient android:angle="-90" android:startColor="#34148c" android:endColor="#34148c"  />
      </shape>
  </item>
 <item android:state_focused="true">
      <shape android:shape="rectangle"  >
          <corners android:radius="3dip" />
          <stroke android:width="1dip" android:color="#34148c" />
-         <solid android:color="#58857e"/>       
+         <solid android:color="#34148c"/>
      </shape>
  </item>  
 <item >
